--- a/assets/custom/login.css
+++ b/assets/custom/login.css
@@ -1,3 +1,14 @@
+.login-wrapper {
+  background-color: #6d5eac;
+  background: url("../img/gallery/hero_1.jpg");
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+
 #invalid-email {
   margin-top: 5px;
   color: #ff0000;
