--- a/assets/custom/tables.css
+++ b/assets/custom/tables.css
@@ -52,6 +52,15 @@
   font-size: 10px;
 }
 
+#basicTableHeader {
+  background-color: rgb(214, 214, 214);
+}
+
+#basicTableHeader input {
+  background-color: rgb(214, 214, 214);
+  font-size: 17px;
+}
+
 #basicTableHeader2 select {
   border: none;
   font-size: 12px;
