--- a/sass_80Pages/myAssets/dashboard/editSubscribers.CSS
+++ b/sass_80Pages/myAssets/dashboard/editSubscribers.CSS
@@ -1,3 +1,30 @@
-.page-content-wrapper .content {
-  padding-left: 0 !important;
+.displayBackendErrorMsg.error small {
+  /* visibility: visible; */
+  display: block;
+  color: #e74c3c;
+}
+.signingMessage small {
+  display: block;
+  text-align: center;
+  color: green;
+  display: none;
+}
+
+#successfulRequest {
+  display: block;
+  text-align: center;
+  color: green;
+  text-transform: capitalize;
+}
+#modalNotifcation {
+  display: none;
+}
+
+.labelDescription {
+  display: block;
+}
+
+.form-group textarea {
+  width: 100%;
+  border-color: #d0d0d0;
 }
