--- a/sass_80Pages/myAssets/dashboard/subscribers Profile/subscriberProfile.css
+++ b/sass_80Pages/myAssets/dashboard/subscribers Profile/subscriberProfile.css
@@ -1,3 +1,7 @@
+/* .page-content-wrapper .content {
+  padding-left: 0 !important;
+} */
+
 .displayBackendErrorMsg.error small {
   /* visibility: visible; */
   display: block;
@@ -8,7 +12,6 @@
   text-align: center;
   color: green;
   display: none;
-  margin-bottom: 20px;
   /* visibility: hidden; */
 }
 
@@ -21,26 +24,18 @@
 #modalNotifcation {
   display: none;
 }
-#imgContainer {
-  display: none;
-  width: 50px;
-  height: 50px;
-}
-.uploadButton {
-  display: inline-block;
-  margin-top: 10px;
-  color: white;
-}
-.selectImage {
-  background-color: #03a9f3;
-  color: white !important;
-  border-radius: 3px;
-  padding: 4px 8px;
-  cursor: pointer;
-  width: 103px;
-  height: 30px;
+
+.labelDescription {
+  display: block;
 }
 
-.uploadCancelBtn {
-  display: none;
+#subscriberProfileForm {
+  border-right: 2px solid #f4f4f4;
+}
+
+#subscriberProfileForm input {
+  border-right: 0;
+  border-left: 0;
+  border-top: 0;
+  pointer-events: none;
 }
