--- a/sass_80Pages/myAssets/dashboard/subscribers Profile/subscriberProfile.css
+++ b/sass_80Pages/myAssets/dashboard/subscribers Profile/subscriberProfile.css
@@ -12,7 +12,6 @@
   text-align: center;
   color: green;
   display: none;
-  /* visibility: hidden; */
 }
 
 #successfulRequest {
@@ -38,4 +37,16 @@
   border-left: 0;
   border-top: 0;
   pointer-events: none;
+}
+
+#activateUsersButton {
+  background: none;
+  color: green;
+  display: none;
+}
+
+#deactivateUsersButton {
+  background: none;
+  color: red;
+  display: none;
 }
