--- a/sass_80Pages/myAssets/profile/profile.css
+++ b/sass_80Pages/myAssets/profile/profile.css
@@ -6,3 +6,50 @@
   color: #ffa500;
   margin-bottom: 20px;
 }
+
+.displayBackendErrorMsg.error small {
+  /* visibility: visible; */
+  display: block;
+  color: #e74c3c;
+}
+.signingMessage small {
+  display: block;
+  text-align: center;
+  color: green;
+  display: none;
+  margin-bottom: 20px;
+  /* visibility: hidden; */
+}
+
+#successfulRequest {
+  display: block;
+  text-align: center;
+  color: green;
+  text-transform: capitalize;
+}
+#modalNotifcation {
+  display: none;
+}
+#imgContainer {
+  display: none;
+  width: 50px;
+  height: 50px;
+}
+.uploadButton {
+  display: inline-block;
+  margin-top: 10px;
+  color: white;
+}
+.selectImage {
+  background-color: #03a9f3;
+  color: white !important;
+  border-radius: 3px;
+  padding: 4px 8px;
+  cursor: pointer;
+  width: 103px;
+  height: 30px;
+}
+
+.uploadCancelBtn {
+  display: none;
+}
