--- a/sass_80Pages/myAssets/dashboard/editprofile.css
+++ b/sass_80Pages/myAssets/dashboard/editprofile.css
@@ -25,6 +25,7 @@
   display: none;
   width: 50px;
   height: 50px;
+  margin-bottom: 10px;
 }
 .uploadButton {
   display: inline-block;
@@ -43,4 +44,16 @@
 
 .uploadCancelBtn {
   display: none;
+}
+
+#selectImage {
+  padding: 5px 7px;
+  background-color: #03a9f3;
+  border-radius: 3px;
+}
+.hiddenButton {
+  display: none;
+}
+#loadingImage {
+  color: green;
 }
