--- a/sass_80Pages/myAssets/profile/security/security.css
+++ b/sass_80Pages/myAssets/profile/security/security.css
@@ -30,10 +30,10 @@
 #modalNotifcation {
   display: none;
 }
-/* #imgContainer {
+#imgContainer {
   width: 50px;
   height: 50px;
-} */
+}
 .uploadButton {
   display: inline-block;
   margin-top: 10px;
@@ -51,4 +51,14 @@
 
 .uploadCancelBtn {
   display: none;
+}
+
+.passwordParentElement {
+  display: grid;
+  place-items: center;
+  min-height: 50vh;
+}
+
+.passwordParentElement > * {
+  width: 100%;
 }
